<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".Restablecercontra">


    <!-- Imagen principal -->

    <TextView
        android:id="@+id/reset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:text="@string/reset_password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reset_image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/contra"
        android:contentDescription="@string/reset_image"
        app:layout_constraintTop_toBottomOf="@id/reset_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Input: Password -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/reset_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Input: Confirm Password -->
    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Botón Continuar -->
    <Button
        android:id="@+id/continue_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/continuer"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
